--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://ahmedtonmoy:admin@tonmoy.qi8qj.mongodb.net/?retryWrites=true&w=majority&appName=Tonmoy
-JWT_SECRET=my_connection
+MONGO_URI= mongodb+srv://admin:admin@tonmoy.qi8qj.mongodb.net/Node-Api?retryWrites=true&w=majority&appName=Tonmoy
+JWT_SECRET=ahmedtonmoy
